src/test/ui/terr-sorts.stderr
error[E0308]: mismatched types
  --> $DIR/terr-sorts.rs:10:14
   |
LL |     want_foo(b);
   |              ^ expected struct `Foo`, found struct `Box`
   |
   = note: expected struct `Foo`
              found struct `Box<Foo>`
help: try dereferencing the `Box`
   |
LL |     want_foo(*b);
   |              +

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
